// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CardList component > renders ErrorFallback for network errors 1`] = `
<div>
  <button>
    Retry
  </button>
</div>
`;

exports[`CardList component > renders NoResultsFound for 404 error 1`] = `
<div>
  <div>
    No Results
  </div>
</div>
`;

exports[`CardList component > renders NoResultsFound if no characters are returned 1`] = `
<div>
  <div>
    No Results
  </div>
</div>
`;

exports[`CardList component > renders character cards when characters are fetched 1`] = `
<div>
  <div
    class="grid grid-cols-1 gap-4 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4"
    data-testid="card-list"
  >
    <div>
      Mock Rick Sanchez
    </div>
  </div>
</div>
`;

exports[`CardList component > shows loader initially 1`] = `
<div>
  <div
    class="fixed inset-0 z-20 flex items-center justify-center bg-custom-dark-night/10 backdrop-blur-sm"
  >
    <div
      class="animate-spin rounded-full border-solid border-custom-green border-t-transparent w-24 h-24 border-6"
      data-testid="loader-spinner"
    />
  </div>
</div>
`;
